--- a/BelajarCRUDWPF/ForgotPasswordWindow.xaml
+++ b/BelajarCRUDWPF/ForgotPasswordWindow.xaml
@@ -11,7 +11,7 @@
         <Button x:Name="btnSendPassword" Click="btnSendPassword_Click" Content="Send Password" HorizontalAlignment="Left" Margin="58,171,0,0" VerticalAlignment="Top" Width="177"/>
         <Label Content="Forgot Password" HorizontalAlignment="Left" Margin="69,22,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Label Content="Email" HorizontalAlignment="Left" Margin="58,83,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnBackToLoginWindow" Click="btnBackToLoginWindow_Click" Content="Back" HorizontalAlignment="Left" Margin="58,214,0,0" VerticalAlignment="Top" Width="177"/>
+        <Button x:Name="btnBackToLoginWindow" Click="btnBackToLoginWindow_Click" Foreground="Gray" Content="Back" HorizontalAlignment="Left" Margin="58,214,0,0" VerticalAlignment="Top" Width="177" FontSize="12" Background="{x:Null}" BorderBrush="{x:Null}" FontWeight="Normal"/>
 
     </Grid>
 </Window>
