--- a/BelajarCRUDWPF/LoginWindow.xaml
+++ b/BelajarCRUDWPF/LoginWindow.xaml
@@ -7,11 +7,11 @@
         mc:Ignorable="d"
         Title="LoginWindow" Height="322.556" Width="300" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        <Button x:Name="btnForgotPassword" Click="btnForgotPassword_Click" Content="Forgot Password" HorizontalAlignment="Left" Margin="58,232,0,0" VerticalAlignment="Top" Width="182"/>
+        <Button x:Name="btnForgotPassword" Background="{x:Null}" Foreground="Gray" Click="btnForgotPassword_Click" Content="Forgot Password?" HorizontalAlignment="Left" Margin="58,232,0,0" VerticalAlignment="Top" Width="182" BorderBrush="{x:Null}" FontSize="12" FontWeight="Normal"/>
         <Button x:Name="btnLogin" Click="btnLogin_Click" Content="Login" HorizontalAlignment="Left" Margin="58,188,0,0" VerticalAlignment="Top" Width="182"/>
-        <TextBox x:Name="txtPasswordLogin" HorizontalAlignment="Left" Height="23" Margin="58,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182"/>
+        <PasswordBox x:Name="txtPasswordLogin" HorizontalAlignment="Left" Height="23" Margin="58,140,0,0" VerticalAlignment="Top" Width="182"/>
         <TextBox x:Name="txtEmailLogin" HorizontalAlignment="Left" Height="23" Margin="58,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="182"/>
-        <Label Content="Login" HorizontalAlignment="Left" Margin="115,10,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Content="LOGIN" HorizontalAlignment="Left" Margin="115,14,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Label Content="Email" HorizontalAlignment="Left" Margin="58,61,0,0" VerticalAlignment="Top"/>
         <Label Content="Password" HorizontalAlignment="Left" Margin="58,116,0,0" VerticalAlignment="Top"/>
     </Grid>
